themes/newtheme/source/css/post.styl
#page-post
  > header
    color #fff
    border-radius 0
    padding-top 200px

    h1
      word-break break-word
      @media phone
        font-size 2rem

    @media phone
      padding-top 3rem

    .post-meta
      ul
        text-align center

        @media phone
          font-size 0.8rem
      a
        color inherit

  ul
    text-align left

article.post-content
  serif()
  font-weight 400
  color #4a4a4a
  line-height 1.6
  text-align justify

  h2, h3, h4, h5, h6
    margin 1em 0 0.7em 0
    text-align left

  code
    @media phone
      word-break break-all

  .paragraph
    p
      a
        border-bottom 1px dashed #c1e4ec

  .source-quote
    blockquote
      font-size 1rem
      background #fffaf3
      padding 1rem 2rem
      border-left 6px solid #ffd9ba
      margin 2rem 0

      @media phone
        padding 1rem

      h3,h4
        margin-top 1rem

      >.paragraph:last-of-type
        >p
          margin-bottom 0

  .olist:not(.styled)
    >ol.arabic
      list-style none
      counter-reset number

      @media phone
        padding 0 0.5rem

      >li
        list-style none
        counter-increment number
        position relative

        >p
          margin-left 32px

        &:before
          content counter(number)
          background color-orange
          color #444
          width 24px
          height 24px
          border-radius 50%
          display inline-block
          text-align center
          line-height 24px
          font-size 16px
          sans-serif()
          position absolute
          top 6px
          left 0
          font-weight 700
          padding 0

  .styled
    ol.arabic
      list-style none
      counter-reset number
      margin 0 2rem
      padding 0

      @media phone
        margin 0 1rem 0 0

      > li
        counter-increment number
        position relative
        padding-top 25px

        p
          margin-left 40px
          z-index 1
          position relative


        &:before
          letter-spacing -2px
          content counter(number) ". "
          font-weight 700
          font-size 3rem
          color #eee
          position absolute
          top -5px
          left 0
          z-index 0

  ul.checklist
    list-style none
    padding-left 2rem

    @media phone
      padding-left 0.5rem

    > li
      list-style none
      > p
        position relative
        padding-left 30px

        i.fa
          position absolute
          top 7px
          left 0
          color #0e7b0e

  .floating-udemy
    position fixed
    z-index 9999


#toc
  roboto()
  background color-light-blue
  position static
  padding 1.25em
  border-bottom 1px solid #efefed
  font-size 0.8em
  display inline-block

  .title
    font-weight bold
    margin-bottom 0.5rem
    font-size 1.5rem
    letter-spacing -2px
    color color-light-purple
    border-bottom 2px solid #e8f0ff

    &:before
      font-family "FontAwesome"
      content "\f0cb"
      font-weight 400
      margin-right 0.5rem

  ul
    list-style decimal
    margin-bottom 0
    li
      line-height 1.8rem
      ul
        list-style circle

footer.post-footer
  position relative
  padding 20px 0 20px 0
  sans-serif()
  font-size 0.7em

  .about-author
    border-top 2px solid #f4f4f4

    .bio
      @media phone
        font-size 1.2em
        padding 0 1em

    a
      border none
      color #93a1b0
      &:hover
        color #507195

  h4
    margin 15px 0 10px 0
    padding 0
    text-transform uppercase

  ul.social-links
    list-style none
    margin 0
    padding 0

    li
      list-style none
      margin 0
      padding 0
      display inline-block
      text-align center
      margin-right 7px
      font-size 20px
      height 32px
      line-height 32px
      width 32px
      background #f8f8f8
      border-radius 50%

      a
        .fa-twitter
          color cornflowerblue !important
        .fa-github
          color #222
        .fa-stack-overflow
          color darkorange
        .fa-youtube
          color red

  .pager
    a
      color #999
      padding 1.2rem
      border 1px solid #e9e9e9
      border-radius 10px

      &:hover
        color #777

.related-posts
  //background #F5F7FA
  background #1d2b36
  padding 50px 0
  color #a2b2c2

  >.container
    >h3
      text-align center
      color #56616d
      font-size 3.4rem
      margin-bottom 2rem

    .card
      border none !important
      box-shadow none !important
      background transparent !important
      .card-body
        sans-serif()

#footnotes
  font-size 0.7em
  sans-serif()
  word-break break-all

.post-tags
  sans-serif()
  font-size 14px
  border-top 2px solid #f4f4f4
  margin 40px 0 0 0
  padding 20px 0 0 0
  color #aaa

  @media phone
    font-size 12px

  ul
    list-style none
    margin 0
    padding 3px 0

    a
      color #555
      border none
      &:hover
        color cornflowerblue

    li
      list-style none
      margin 0 4px 0 0
      padding 0
      display inline

      &.text
        a.mark
          padding 3px 5px
          font-weight bold
          serif()
          &:hover
            color #444


      &:not(.text):after
        content ","

      &:last-of-type
        &:after
          content none

.youtube-box
  sans-serif()
  background #fafafa
  //background-image: linear-gradient(to top, #f0f3f5 0%, #f4f4f4 80%);
  width: 100vw
  margin-left 50%
  transform translateX(-50%)
  color #777

  h4
    margin-top 1rem !important

  p.desc
    font-size 0.8rem

  a
    border-bottom none !important

  .card
    margin-top 1rem

    .card-header
      border 1px solid #fafafa

      @media phone
        height 180px !important

.colist
  font-size 1.1rem
  margin-bottom 2rem
  >table
    >tbody
      >tr
        >td:first-child
          vertical-align top


.admonitionblock
  margin 20px 0
  background #fafafa
  padding 15px
  text-align left
  font-size 1.1rem

  @media phone
    padding 15px 0

  >table
    border-collapse separate
    border 0
    background none
    width 100%
    table-layout fixed

    td.icon
      text-align center
      width 80px

      @media phone
        width 40px
        vertical-align top
        padding-top 30px

      img
        max-width none

      .title
        font-weight bold
        font-family "Open Sans","DejaVu Sans",sans-serif
        text-transform uppercase

    td.content
      padding-left 1.125em
      padding-right 1.25em
      border-left 1px solid #ddddd8
      color rgba(0,0,0,.6)
      overflow auto

      @media phone
        padding 0 0.7em

      &>:last-child,
      &>:last-child>:last-child
        margin-bottom 0

  td.icon
    [class^="fa icon-"]
      font-size 2.5em
      cursor default

      @media phone
        font-size 1.5rem

    .icon-note:before
      content "\f05a"
      color #4878c1

    .icon-tip:before
      content "\f0eb"
      color #ffa620
      //font-weight 400

    .icon-warning:before
      content "\f071"
      color #ffb257

    .icon-caution:before
      content "\f06d"
      color #bf3400

    .icon-important:before
      content "\f06a"
      color #bf0000

